🔒 Security fix: Clear API keys from settings.json
- Remove hardcoded DeepSeek and OpenAI API keys from public repository
- API keys should be set locally via dashboard settings interface
- Prevents accidental exposure of sensitive credentials in GitHub

--- a/api_backend/api_backend/settings.json
+++ b/api_backend/api_backend/settings.json
@@ -1,6 +1,6 @@
 {
   "apiKeys": {
-    "deepseek": "sk-52cfbf637d204100bb7ce850fe628a0f",
+    "deepseek": "",
     "openai": "",
     "lmstudio": "http://localhost:1234"
   },
